--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,17 +5,19 @@
     flex-direction: column;
     min-height: 100vh;
     justify-content: space-around;
+    margin-bottom: 20px;
 }
 
 
 .features {
     display: flex;
     flex-direction: column;
-    height: 50vh;
+    min-height: 50vh;
     justify-content: space-around;
 }
 
 .bottomline {
     padding-bottom: 30px;
     border-bottom: 1px solid #000000e0;
+    margin-bottom: 40px;
 }
